Fixed the header by using align-items:center on .links and using .flex:inline-block on a ref and gave them a padding of 18 px to create space.

--- a/styles.css
+++ b/styles.css
@@ -6,22 +6,20 @@ html, body{
 * {
 font-family: 'Roboto', 'Helvetica', sans-serif;
 box-sizing:border-box;
-padding-left: 5%;
-padding-right: 5%;
 }
 
 .header, .footer{
 display:flex;
-justify-content:space-between;
+justify-content:space-evenly;
 background-color: #1f2937;
 color: #f9faf8;
-border: 10px;
+border: 5px;
 border-color:#1f2937;
 }
 
-.links {
-justify-items:right;
-flex: shrink 0;
+.links{
+display:flex;
+align-items:center;
 }
 
 .container{
@@ -32,6 +30,8 @@ a {
 text-decoration:none;
 color: #e5e7eb;
 text-size-adjust:18px;
+display:inline-block;
+padding:18px;
 }
 
 .blue{
